latest version users api

--- a/Authentication_System_Sample.ipynb
+++ b/Authentication_System_Sample.ipynb
@@ -8,7 +8,7 @@
    },
    "outputs": [],
    "source": [
-    "from users import User"
+    "from besmart.api.users import User"
    ]
   },
   {
@@ -159,7 +159,7 @@
    "execution_count": 9,
    "outputs": [],
    "source": [
-    "from repository import create_user\n",
+    "from besmart.api.repository import create_user\n",
     "create_user(user4, connection_string)"
    ],
    "metadata": {
@@ -183,9 +183,65 @@
     }
    ],
    "source": [
-    "from repository import get_user_email_and_password\n",
-    "existing_user = get_user_email_and_password(user4, connection_string)\n",
+    "from besmart.api.repository import get_user_by_email\n",
+    "existing_user = get_user_by_email(user4, connection_string)\n",
     "existing_user"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "outputs": [],
+   "source": [
+    "from besmart.api.register import signup\n",
+    "\n",
+    "request_body = {\n",
+    "    \"name\": \"A B\",\n",
+    "    \"email\": \"ar3@b.fcc\",\n",
+    "    \"password\": \"yhreA31!_-\",\n",
+    "    \"second_password\": \"yhreA31!_-\"\n",
+    "}\n",
+    "connection_string = \"Database Example/users.db\"\n",
+    "\n",
+    "signup(request_body, connection_string)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "(8, 'A B', 'ar3@b.fcc', 'yhreA31!_-')"
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from besmart.api.register import signin\n",
+    "\n",
+    "request_body = {\n",
+    "    \"email\": \"ar3@b.fcc\",\n",
+    "    \"password\": \"yhreA31!_-\",\n",
+    "}\n",
+    "connection_string = \"Database Example/users.db\"\n",
+    "\n",
+    "user = signin(request_body, connection_string)\n",
+    "user.id, user.name, user.email, user.password"
    ],
    "metadata": {
     "collapsed": false,
@@ -198,12 +254,7 @@
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
-   "source": [
-    "# TODO: Modify signup function to work with an User object (instead of dict)\n",
-    "# TODO: Modify signup function to work with create_user() from repository.py\n",
-    "# TODO: Modify signin function to work with an User object (instead of dict)\n",
-    "# TODO: Modify signin function to work with get_user_email_and_password() from repository.py"
-   ],
+   "source": [],
    "metadata": {
     "collapsed": false,
     "pycharm": {
